--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,4 +10,4 @@ server.port = 8081
 eureka.instance.client.serverUrl.defaultZone = http://localhost:8761/eureka/
 eureka.client.enabled=true
 
-spring.boot.message = Hello, Employee Service Updated Lan1
+spring.boot.message = Hello, Employee Service 
